Improve responsive design to fix layout issues on smaller screens

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -72,8 +72,8 @@ header p {
 }
 
 section {
-    margin-left: 15.625rem;
-    margin-right: 15.625rem;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 .sections {
@@ -169,17 +169,18 @@ section {
 
 .resumen-info-container {
     margin-right: 2.5rem;
+    width: 70%;
 }
 
 .resumen-img-container {
-    margin-left: 2.5rem;
+    width: 30%;
     display: flex;
     align-items: center;
 }
 
 .img-dev {
-    width: 18.75rem;
-    height: 18.75rem;
+    width: 100%;
+    height: auto;
 }  
 
 @media (max-width: 480px) {
@@ -369,7 +370,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 26.875rem;
+    width: 30%;
 }
 
 .skill-card h3 {
@@ -378,12 +379,16 @@ section {
 }
 
 .skill-description {
-    height: 15.625rem;
-    width: 21.875rem;
+    height: auto;
+    width: 100%;
 }
 
 .skill-description h3 {
     padding: 0 1.875rem;
+}
+
+.skill-description ul {
+    padding-right: 0.8rem;
 }
 
 .skill-icon {
@@ -391,7 +396,7 @@ section {
     justify-content: center;
     align-items: center;
     height: 18.75rem;
-    width: 18.75rem;
+    width: 100%;
     flex-wrap: wrap;
 }
 
@@ -409,8 +414,8 @@ section {
 
 .icon {
     fill: var(--acento);
-    width: 3.75rem;
-    height: 3.75rem;
+    width: 20%;
+    height: auto;
     margin: 0.9375rem;
 }
 
@@ -499,9 +504,13 @@ section {
     flex-grow: 0;
 }
 
+.project-img {
+    width: 100%;
+}
+
 .project-img img {
-    width: 18.75rem;
-    height: 12.5rem;
+    width: 100%;
+    height: 100%;
 }
 
 .project-link {
@@ -532,7 +541,7 @@ i.fas, .project-link a {
 }
 
 .form-card {
-    width: 37.5rem;
+    width: 55%;
 }
 
 .formulario {
@@ -629,8 +638,8 @@ button:hover {
 }
 
 #map {
-    width: 31.25rem;
-    height: 25rem;
+    width: 40%;
+    height: auto;
     margin-top: 3.75rem;
 }
 
@@ -659,6 +668,10 @@ footer {
     width: 31.25rem;
     display: flex;
     align-items: center;
+}
+
+.video-description-container {
+    margin: 1rem;
 }
 
 footer ul {
